yacc/y.output
   0  $accept : program $end

   1  program : stmts

   2  stmts : stmt
   3        | stmts SEMI stmt

   4  stmt :
   5       | selection
   6       | iteration
   7       | assignment

   8  selection : IF alts FI

   9  iteration : DO alts OD

  10  alts : alt
  11       | alts DCOLON alt

  12  alt : guard QUESTION stmts

  13  guard : expr

  14  assignment : vars ASSGN exprs
  15             | vars ASSGN subprogram ASSGN exprs
  16             | ASSGN subprogram ASSGN exprs
  17             | vars ASSGN subprogram ASSGN
  18             | ASSGN subprogram ASSGN

  19  vars : var
  20       | vars COMMA var

  21  var : ID
  22      | var LSQUARE expr RSQUARE

  23  exprs : expr
  24        | exprs COMMA expr

  25  subprogram : ID

  26  expr : disjunction

  27  disjunction : conjunction
  28              | disjunction OR conjunction

  29  conjunction : negation
  30              | conjunction AND negation

  31  negation : relation
  32           | NOT relation

  33  relation : sum
  34           | sum LT sum
  35           | sum LEQ sum
  36           | sum EQ sum
  37           | sum NEQ sum
  38           | sum GEQ sum
  39           | sum GT sum

  40  sum : term
  41      | MINUS term
  42      | sum PLUS term
  43      | sum MINUS term

  44  term : factor
  45       | term STAR factor
  46       | term SLASH factor
  47       | term DSLASH factor

  48  factor : TRUE
  49         | FALSE
  50         | INTEGER
  51         | REAL
  52         | var
  53         | LPAREN expr RPAREN
  54         | LSQUARE exprs RSQUARE
  55         | B2I factor
  56         | I2R factor
  57         | R2I factor
  58         | RAND

state 0
	$accept : . program $end  (0)
	stmt : .  (4)

	ID  shift 1
	ASSGN  shift 2
	IF  shift 3
	DO  shift 4
	$end  reduce 4
	SEMI  reduce 4

	program  goto 5
	stmts  goto 6
	stmt  goto 7
	selection  goto 8
	iteration  goto 9
	assignment  goto 10
	vars  goto 11
	var  goto 12


state 1
	var : ID .  (21)

	.  reduce 21


state 2
	assignment : ASSGN . subprogram ASSGN exprs  (16)
	assignment : ASSGN . subprogram ASSGN  (18)

	ID  shift 13
	.  error

	subprogram  goto 14


state 3
	selection : IF . alts FI  (8)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	alts  goto 27
	alt  goto 28
	guard  goto 29
	expr  goto 30
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 4
	iteration : DO . alts OD  (9)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	alts  goto 39
	alt  goto 28
	guard  goto 29
	expr  goto 30
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 5
	$accept : program . $end  (0)

	$end  accept


state 6
	program : stmts .  (1)
	stmts : stmts . SEMI stmt  (3)

	SEMI  shift 40
	$end  reduce 1


state 7
	stmts : stmt .  (2)

	.  reduce 2


state 8
	stmt : selection .  (5)

	.  reduce 5


state 9
	stmt : iteration .  (6)

	.  reduce 6


state 10
	stmt : assignment .  (7)

	.  reduce 7


state 11
	assignment : vars . ASSGN exprs  (14)
	assignment : vars . ASSGN subprogram ASSGN exprs  (15)
	assignment : vars . ASSGN subprogram ASSGN  (17)
	vars : vars . COMMA var  (20)

	ASSGN  shift 41
	COMMA  shift 42
	.  error


state 12
	vars : var .  (19)
	var : var . LSQUARE expr RSQUARE  (22)

	LSQUARE  shift 43
	ASSGN  reduce 19
	COMMA  reduce 19


state 13
	subprogram : ID .  (25)

	.  reduce 25


state 14
	assignment : ASSGN subprogram . ASSGN exprs  (16)
	assignment : ASSGN subprogram . ASSGN  (18)

	ASSGN  shift 44
	.  error


state 15
	factor : TRUE .  (48)

	.  reduce 48


state 16
	factor : FALSE .  (49)

	.  reduce 49


state 17
	factor : INTEGER .  (50)

	.  reduce 50


state 18
	factor : REAL .  (51)

	.  reduce 51


state 19
	factor : RAND .  (58)

	.  reduce 58


state 20
	negation : NOT . relation  (32)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	relation  goto 45
	sum  goto 36
	term  goto 37
	factor  goto 38


state 21
	sum : MINUS . term  (41)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	term  goto 46
	factor  goto 38


state 22
	factor : LPAREN . expr RPAREN  (53)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	expr  goto 47
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 23
	factor : LSQUARE . exprs RSQUARE  (54)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	expr  goto 48
	exprs  goto 49
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 24
	factor : B2I . factor  (55)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	factor  goto 50


state 25
	factor : I2R . factor  (56)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	factor  goto 51


state 26
	factor : R2I . factor  (57)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	factor  goto 52


state 27
	selection : IF alts . FI  (8)
	alts : alts . DCOLON alt  (11)

	FI  shift 53
	DCOLON  shift 54
	.  error


state 28
	alts : alt .  (10)

	.  reduce 10


state 29
	alt : guard . QUESTION stmts  (12)

	QUESTION  shift 55
	.  error


state 30
	guard : expr .  (13)

	.  reduce 13


state 31
	var : var . LSQUARE expr RSQUARE  (22)
	factor : var .  (52)

	LSQUARE  shift 43
	$end  reduce 52
	SEMI  reduce 52
	FI  reduce 52
	OD  reduce 52
	DCOLON  reduce 52
	QUESTION  reduce 52
	COMMA  reduce 52
	OR  reduce 52
	AND  reduce 52
	LT  reduce 52
	LEQ  reduce 52
	EQ  reduce 52
	NEQ  reduce 52
	GT  reduce 52
	GEQ  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	STAR  reduce 52
	SLASH  reduce 52
	DSLASH  reduce 52
	RPAREN  reduce 52
	RSQUARE  reduce 52


state 32
	expr : disjunction .  (26)
	disjunction : disjunction . OR conjunction  (28)

	OR  shift 56
	$end  reduce 26
	SEMI  reduce 26
	FI  reduce 26
	OD  reduce 26
	DCOLON  reduce 26
	QUESTION  reduce 26
	COMMA  reduce 26
	RPAREN  reduce 26
	RSQUARE  reduce 26


state 33
	disjunction : conjunction .  (27)
	conjunction : conjunction . AND negation  (30)

	AND  shift 57
	$end  reduce 27
	SEMI  reduce 27
	FI  reduce 27
	OD  reduce 27
	DCOLON  reduce 27
	QUESTION  reduce 27
	COMMA  reduce 27
	OR  reduce 27
	RPAREN  reduce 27
	RSQUARE  reduce 27


state 34
	conjunction : negation .  (29)

	.  reduce 29


state 35
	negation : relation .  (31)

	.  reduce 31


state 36
	relation : sum .  (33)
	relation : sum . LT sum  (34)
	relation : sum . LEQ sum  (35)
	relation : sum . EQ sum  (36)
	relation : sum . NEQ sum  (37)
	relation : sum . GEQ sum  (38)
	relation : sum . GT sum  (39)
	sum : sum . PLUS term  (42)
	sum : sum . MINUS term  (43)

	LT  shift 58
	LEQ  shift 59
	EQ  shift 60
	NEQ  shift 61
	GT  shift 62
	GEQ  shift 63
	PLUS  shift 64
	MINUS  shift 65
	$end  reduce 33
	SEMI  reduce 33
	FI  reduce 33
	OD  reduce 33
	DCOLON  reduce 33
	QUESTION  reduce 33
	COMMA  reduce 33
	OR  reduce 33
	AND  reduce 33
	RPAREN  reduce 33
	RSQUARE  reduce 33


state 37
	sum : term .  (40)
	term : term . STAR factor  (45)
	term : term . SLASH factor  (46)
	term : term . DSLASH factor  (47)

	STAR  shift 66
	SLASH  shift 67
	DSLASH  shift 68
	$end  reduce 40
	SEMI  reduce 40
	FI  reduce 40
	OD  reduce 40
	DCOLON  reduce 40
	QUESTION  reduce 40
	COMMA  reduce 40
	OR  reduce 40
	AND  reduce 40
	LT  reduce 40
	LEQ  reduce 40
	EQ  reduce 40
	NEQ  reduce 40
	GT  reduce 40
	GEQ  reduce 40
	PLUS  reduce 40
	MINUS  reduce 40
	RPAREN  reduce 40
	RSQUARE  reduce 40


state 38
	term : factor .  (44)

	.  reduce 44


state 39
	iteration : DO alts . OD  (9)
	alts : alts . DCOLON alt  (11)

	OD  shift 69
	DCOLON  shift 54
	.  error


state 40
	stmts : stmts SEMI . stmt  (3)
	stmt : .  (4)

	ID  shift 1
	ASSGN  shift 2
	IF  shift 3
	DO  shift 4
	$end  reduce 4
	SEMI  reduce 4
	FI  reduce 4
	OD  reduce 4
	DCOLON  reduce 4

	stmt  goto 70
	selection  goto 8
	iteration  goto 9
	assignment  goto 10
	vars  goto 11
	var  goto 12


state 41
	assignment : vars ASSGN . exprs  (14)
	assignment : vars ASSGN . subprogram ASSGN exprs  (15)
	assignment : vars ASSGN . subprogram ASSGN  (17)

	ID  shift 71
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	expr  goto 48
	exprs  goto 72
	subprogram  goto 73
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 42
	vars : vars COMMA . var  (20)

	ID  shift 1
	.  error

	var  goto 74


state 43
	var : var LSQUARE . expr RSQUARE  (22)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	expr  goto 75
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 44
	assignment : ASSGN subprogram ASSGN . exprs  (16)
	assignment : ASSGN subprogram ASSGN .  (18)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	$end  reduce 18
	SEMI  reduce 18
	FI  reduce 18
	OD  reduce 18
	DCOLON  reduce 18

	expr  goto 48
	exprs  goto 76
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 45
	negation : NOT relation .  (32)

	.  reduce 32


state 46
	sum : MINUS term .  (41)
	term : term . STAR factor  (45)
	term : term . SLASH factor  (46)
	term : term . DSLASH factor  (47)

	STAR  shift 66
	SLASH  shift 67
	DSLASH  shift 68
	$end  reduce 41
	SEMI  reduce 41
	FI  reduce 41
	OD  reduce 41
	DCOLON  reduce 41
	QUESTION  reduce 41
	COMMA  reduce 41
	OR  reduce 41
	AND  reduce 41
	LT  reduce 41
	LEQ  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	GT  reduce 41
	GEQ  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	RPAREN  reduce 41
	RSQUARE  reduce 41


state 47
	factor : LPAREN expr . RPAREN  (53)

	RPAREN  shift 77
	.  error


state 48
	exprs : expr .  (23)

	.  reduce 23


state 49
	exprs : exprs . COMMA expr  (24)
	factor : LSQUARE exprs . RSQUARE  (54)

	COMMA  shift 78
	RSQUARE  shift 79
	.  error


state 50
	factor : B2I factor .  (55)

	.  reduce 55


state 51
	factor : I2R factor .  (56)

	.  reduce 56


state 52
	factor : R2I factor .  (57)

	.  reduce 57


state 53
	selection : IF alts FI .  (8)

	.  reduce 8


state 54
	alts : alts DCOLON . alt  (11)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	alt  goto 80
	guard  goto 29
	expr  goto 30
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 55
	alt : guard QUESTION . stmts  (12)
	stmt : .  (4)

	ID  shift 1
	ASSGN  shift 2
	IF  shift 3
	DO  shift 4
	SEMI  reduce 4
	FI  reduce 4
	OD  reduce 4
	DCOLON  reduce 4

	stmts  goto 81
	stmt  goto 7
	selection  goto 8
	iteration  goto 9
	assignment  goto 10
	vars  goto 11
	var  goto 12


state 56
	disjunction : disjunction OR . conjunction  (28)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	conjunction  goto 82
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 57
	conjunction : conjunction AND . negation  (30)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	negation  goto 83
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 58
	relation : sum LT . sum  (34)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	sum  goto 84
	term  goto 37
	factor  goto 38


state 59
	relation : sum LEQ . sum  (35)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	sum  goto 85
	term  goto 37
	factor  goto 38


state 60
	relation : sum EQ . sum  (36)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	sum  goto 86
	term  goto 37
	factor  goto 38


state 61
	relation : sum NEQ . sum  (37)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	sum  goto 87
	term  goto 37
	factor  goto 38


state 62
	relation : sum GT . sum  (39)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	sum  goto 88
	term  goto 37
	factor  goto 38


state 63
	relation : sum GEQ . sum  (38)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	sum  goto 89
	term  goto 37
	factor  goto 38


state 64
	sum : sum PLUS . term  (42)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	term  goto 90
	factor  goto 38


state 65
	sum : sum MINUS . term  (43)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	term  goto 91
	factor  goto 38


state 66
	term : term STAR . factor  (45)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	factor  goto 92


state 67
	term : term SLASH . factor  (46)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	factor  goto 93


state 68
	term : term DSLASH . factor  (47)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	var  goto 31
	factor  goto 94


state 69
	iteration : DO alts OD .  (9)

	.  reduce 9


state 70
	stmts : stmts SEMI stmt .  (3)

	.  reduce 3


state 71
	var : ID .  (21)
	subprogram : ID .  (25)

	$end  reduce 21
	ASSGN  reduce 25
	SEMI  reduce 21
	FI  reduce 21
	OD  reduce 21
	DCOLON  reduce 21
	COMMA  reduce 21
	OR  reduce 21
	AND  reduce 21
	LT  reduce 21
	LEQ  reduce 21
	EQ  reduce 21
	NEQ  reduce 21
	GT  reduce 21
	GEQ  reduce 21
	PLUS  reduce 21
	MINUS  reduce 21
	STAR  reduce 21
	SLASH  reduce 21
	DSLASH  reduce 21
	LSQUARE  reduce 21


state 72
	assignment : vars ASSGN exprs .  (14)
	exprs : exprs . COMMA expr  (24)

	COMMA  shift 78
	$end  reduce 14
	SEMI  reduce 14
	FI  reduce 14
	OD  reduce 14
	DCOLON  reduce 14


state 73
	assignment : vars ASSGN subprogram . ASSGN exprs  (15)
	assignment : vars ASSGN subprogram . ASSGN  (17)

	ASSGN  shift 95
	.  error


state 74
	vars : vars COMMA var .  (20)
	var : var . LSQUARE expr RSQUARE  (22)

	LSQUARE  shift 43
	ASSGN  reduce 20
	COMMA  reduce 20


state 75
	var : var LSQUARE expr . RSQUARE  (22)

	RSQUARE  shift 96
	.  error


state 76
	assignment : ASSGN subprogram ASSGN exprs .  (16)
	exprs : exprs . COMMA expr  (24)

	COMMA  shift 78
	$end  reduce 16
	SEMI  reduce 16
	FI  reduce 16
	OD  reduce 16
	DCOLON  reduce 16


state 77
	factor : LPAREN expr RPAREN .  (53)

	.  reduce 53


state 78
	exprs : exprs COMMA . expr  (24)

	ID  shift 1
	TRUE  shift 15
	FALSE  shift 16
	INTEGER  shift 17
	REAL  shift 18
	RAND  shift 19
	NOT  shift 20
	MINUS  shift 21
	LPAREN  shift 22
	LSQUARE  shift 23
	B2I  shift 24
	I2R  shift 25
	R2I  shift 26
	.  error

	expr  goto 97
	var  goto 31
	disjunction  goto 32
	conjunction  goto 33
	negation  goto 34
	relation  goto 35
	sum  goto 36
	term  goto 37
	factor  goto 38


state 79
	factor : LSQUARE exprs RSQUARE .  (54)

	.  reduce 54


state 80
	alts : alts DCOLON alt .  (11)

	.  reduce 11


state 81
	stmts : stmts . SEMI stmt  (3)
	alt : guard QUESTION stmts .  (12)

	SEMI  shift 40
	FI  reduce 12
	OD  reduce 12
	DCOLON  reduce 12


state 82
	disjunction : disjunction OR conjunction .  (28)
	conjunction : conjunction . AND negation  (30)

	AND  shift 57
	$end  reduce 28
	SEMI  reduce 28
	FI  reduce 28
	OD  reduce 28
	DCOLON  reduce 28
	QUESTION  reduce 28
	COMMA  reduce 28
	OR  reduce 28
	RPAREN  reduce 28
	RSQUARE  reduce 28


state 83
	conjunction : conjunction AND negation .  (30)

	.  reduce 30


state 84
	relation : sum LT sum .  (34)
	sum : sum . PLUS term  (42)
	sum : sum . MINUS term  (43)

	PLUS  shift 64
	MINUS  shift 65
	$end  reduce 34
	SEMI  reduce 34
	FI  reduce 34
	OD  reduce 34
	DCOLON  reduce 34
	QUESTION  reduce 34
	COMMA  reduce 34
	OR  reduce 34
	AND  reduce 34
	RPAREN  reduce 34
	RSQUARE  reduce 34


state 85
	relation : sum LEQ sum .  (35)
	sum : sum . PLUS term  (42)
	sum : sum . MINUS term  (43)

	PLUS  shift 64
	MINUS  shift 65
	$end  reduce 35
	SEMI  reduce 35
	FI  reduce 35
	OD  reduce 35
	DCOLON  reduce 35
	QUESTION  reduce 35
	COMMA  reduce 35
	OR  reduce 35
	AND  reduce 35
	RPAREN  reduce 35
	RSQUARE  reduce 35


state 86
	relation : sum EQ sum .  (36)
	sum : sum . PLUS term  (42)
	sum : sum . MINUS term  (43)

	PLUS  shift 64
	MINUS  shift 65
	$end  reduce 36
	SEMI  reduce 36
	FI  reduce 36
	OD  reduce 36
	DCOLON  reduce 36
	QUESTION  reduce 36
	COMMA  reduce 36
	OR  reduce 36
	AND  reduce 36
	RPAREN  reduce 36
	RSQUARE  reduce 36


state 87
	relation : sum NEQ sum .  (37)
	sum : sum . PLUS term  (42)
	sum : sum . MINUS term  (43)

	PLUS  shift 64
	MINUS  shift 65
	$end  reduce 37
	SEMI  reduce 37
	FI  reduce 37
	OD  reduce 37
	DCOLON  reduce 37
	QUESTION  reduce 37
	COMMA  reduce 37
	OR  reduce 37
	AND  reduce 37
	RPAREN  reduce 37
	RSQUARE  reduce 37


state 88
	relation : sum GT sum .  (39)
	sum : sum . PLUS term  (42)
	sum : sum . MINUS term  (43)

	PLUS  shift 64
	MINUS  shift 65
	$end  reduce 39
	SEMI  reduce 39
	FI  reduce 39
	OD  reduce 39
	DCOLON  reduce 39
	QUESTION  reduce 39
	COMMA  reduce 39
	OR  reduce 39
	AND  reduce 39
	RPAREN  reduce 39
	RSQUARE  reduce 39


state 89
	relation : sum GEQ sum .  (38)
	sum : sum . PLUS term  (42)
	sum : sum . MINUS term  (43)

	PLUS  shift 64
	MINUS  shift 65
	$end  reduce 38
	SEMI  reduce 38
	FI  reduce 38
	OD  reduce 38
	DCOLON  reduce 38
	QUESTION  reduce 38
	COMMA  reduce 38
	OR  reduce 38
	AND  reduce 38
	RPAREN  reduce 38
	RSQUARE  reduce 38


state 90
	sum : sum PLUS term .  (42)
	term : term . STAR factor  (45)
	term : term . SLASH factor  (46)
	term : term . DSLASH factor  (47)

	STAR  shift 66
	SLASH  shift 67
	DSLASH  shift 68
	$end  reduce 42
	SEMI  reduce 42
	FI  reduce 42
	OD  reduce 42
	DCOLON  reduce 42
	QUESTION  reduce 42
	COMMA  reduce 42
	OR  reduce 42
	AND  reduce 42
	LT  reduce 42
	LEQ  reduce 42
	EQ  reduce 42
	NEQ  reduce 42
	GT  reduce 42
	GEQ  reduce 42
	PLUS  reduce 42
	MINUS  reduce 42
	RPAREN  reduce 42
	RSQUARE  reduce 42


state 91
	sum : sum MINUS term .  (43)
	term : term . STAR factor  (45)
	term : term . SLASH factor  (46)
	term : term . DSLASH factor  (47)
